--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,5 +8,6 @@
     },
     "source.fixAll.eslint": true,
     "typescript.tsdk": "node_modules/typescript/lib",
-    "eslint.enable": true
+    "eslint.enable": true,
+    "editor.tabSize": 2
   }
