--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-scripts": "4.0.1",
     "styled-components": "^5.2.1",
     "typescript": "^4.0.3",
+    "use-places-autocomplete": "^1.7.1",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
@@ -57,6 +58,7 @@
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-react": "^7.22.0",
     "eslint-plugin-react-hooks": "^4.2.0",
-    "prettier": "^2.2.1"
+    "prettier": "^2.2.1",
+    "@types/googlemaps": "^3.43.2"
   }
 }
