--- a/package.json
+++ b/package.json
@@ -10,6 +10,11 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.53",
     "@types/react-dom": "^16.9.8",
+    "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "forever": "^3.0.4",
+    "node-fetch": "^2.6.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-google-recaptcha": "^2.1.0",
@@ -25,7 +30,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "startserver": "yarn forever stopall; yarn forever start -a server.js; yarn forever list"
   },
   "eslintConfig": {
     "extends": [
@@ -47,6 +53,7 @@
   },
   "devDependencies": {
     "@types/googlemaps": "^3.43.2",
+    "@types/react-google-recaptcha": "^2.1.0",
     "@types/react-router": "^5.1.11",
     "@types/react-router-dom": "^5.1.7",
     "@types/styled-components": "^5.1.7",
